Added basic yee-haw functionality

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/aveney23/wormtimes#readme",
   "dependencies": {
+    "discord.js": "^11.5.1",
+    "discord.js-commando": "^0.10.0",
     "electron": "^7.0.0"
   }
 }
