--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/aveney23/wormtimes#readme",
   "dependencies": {
     "discord.js": "^11.5.1",
-    "discord.js-commando": "^0.10.0",
-    "electron": "^7.0.0"
+    "discord.js-commando": "^0.10.0"
   }
 }
