--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/aveney23/wormtimes#readme",
   "dependencies": {
     "discord.js": "^11.5.1",
-    "discord.js-commando": "^0.10.0"
+    "discord.js-commando": "^0.10.0",
+    "random-words": "^1.1.0"
   }
 }
