--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/aveney23/wormtimes#readme",
   "dependencies": {
+    "codacy-coverage": "^3.4.0",
     "discord.js": "^11.5.1",
     "discord.js-commando": "^0.10.0",
     "electron": "^7.0.0"
