--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "codacy-coverage": "^3.4.0",
     "discord.js": "^11.5.1",
     "discord.js-commando": "^0.10.0",
-    "electron": "^7.0.0"
+    "electron": "^7.0.0",
+    "jsonfile": "^5.0.0"
   }
 }
